RESOLVED FIXED266624
[WPE] ASSERTION FAILED: m_thread.ptr() == &Thread::current()
https://bugs.webkit.org/show_bug.cgi?id=266624
Summary [WPE] ASSERTION FAILED: m_thread.ptr() == &Thread::current()
Vitaly Dyackhov
Reported 2023-12-19 02:03:19 PST
Tests: fast/events/wheel/wheel-event-destroys-overflow.html fast/events/wheel/wheelevent-basic.html Stack trace: ``` #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007ffac26cd0ff in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007ffac2b3670e in WTF::SingleThreadIntegralWrapper<unsigned int>::assertThread() const (this=0x7ffaa60f1b40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/SingleThreadIntegralWrapper.h:45 #3 0x00007ffac32c59f4 in WTF::SingleThreadIntegralWrapper<unsigned int>::operator++() (this=0x7ffaa60f1b40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/SingleThreadIntegralWrapper.h:89 #4 0x00007ffac3d5e078 in WTF::WeakPtrImplBaseSingleThread<WTF::SingleThreadWeakPtrImpl>::ref() const (this=0x7ffaa60f1b40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/WeakRef.h:248 #5 0x00007ffac687552a in WTF::DefaultRefDerefTraits<WTF::SingleThreadWeakPtrImpl>::refIfNotNull(WTF::SingleThreadWeakPtrImpl*) (ptr=0x7ffaa60f1b40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:36 #6 0x00007ffac68754b0 in WTF::RefPtr<WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::SingleThreadWeakPtrImpl> >::RefPtr(WTF::SingleThreadWeakPtrImpl*) (this=0x7ff82cffc610, ptr=0x7ffaa60f1b40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:63 #7 0x00007ffac88e438d in WTF::WeakPtr<WebCore::Page, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl> >::WeakPtr<void>(WebCore::Page const&, WTF::EnableWeakPtrThreadingAssertions) (this=0x7ff82cffc610, object=..., shouldEnableAssertions=WTF::EnableWeakPtrThreadingAssertions::Yes) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/WeakPtr.h:63 #8 0x00007ffaca7fe935 in WebCore::WheelEventTestMonitor::scheduleCallbackCheck() (this=0x7ffaa623d200) at /app/webkit/Source/WebCore/page/WheelEventTestMonitor.cpp:134 #9 0x00007ffaca7fe69b in WebCore::WheelEventTestMonitor::removeDeferralForReason(void const*, WTF::OptionSet<WebCore::WheelEventTestMonitorDeferReason>) (this=0x7ffaa623d200, identifier=0x2b, reason=...) at /app/webkit/Source/WebCore/page/WheelEventTestMonitor.cpp:111 #10 0x00007ffaca8ad80e in WebCore::WheelEventTestMonitorCompletionDeferrer::~WheelEventTestMonitorCompletionDeferrer() (this=0x7ffaa6087810, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/page/WheelEventTestMonitor.h:110 #11 0x00007ffaca8a0e16 in ~<lambda>(void) (this=0x7ffaa6087790, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/page/scrolling/ThreadedScrollingCoordinator.cpp:85 #12 0x00007ffaca8a7ec2 in WTF::Detail::CallableWrapper<WebCore::ThreadedScrollingCoordinator::handleWheelEventForScrolling(const WebCore::PlatformWheelEvent&, WebCore::ScrollingNodeID, std::optional<WebCore::WheelScrollGestureState>)::<lambda()>, void>::~CallableWrapper(void) (this=0x7ffaa6087780, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:47 #13 0x00007ffaca8a7eea in WTF::Detail::CallableWrapper<WebCore::ThreadedScrollingCoordinator::handleWheelEventForScrolling(const WebCore::PlatformWheelEvent&, WebCore::ScrollingNodeID, std::optional<WebCore::WheelScrollGestureState>)::<lambda()>, void>::~CallableWrapper(void) (this=0x7ffaa6087780, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:47 #14 0x00007ffac2778248 in std::default_delete<WTF::Detail::CallableWrapperBase<void> >::operator()(WTF::Detail::CallableWrapperBase<void>*) const (this=0x7ff82cffc880, __ptr=0x7ffaa6087780) at /usr/include/c++/13.2.0/bits/unique_ptr.h:99 #15 0x00007ffac2776054 in std::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::default_delete<WTF::Detail::CallableWrapperBase<void> > >::~unique_ptr() (this=0x7ff82cffc880, __in_chrg=<optimized out>) at /usr/include/c++/13.2.0/bits/unique_ptr.h:404 #16 0x00007ffac2775990 in WTF::Function<void ()>::~Function() (this=0x7ff82cffc880, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:63 #17 0x00007ffac653d59d in WTF::RunLoop::performWork() (this=0x7ffaa6064180) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:148 #18 0x00007ffac65f7f98 in operator()(gpointer) const (__closure=0x0, userData=0x7ffaa6064180) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #19 0x00007ffac65f7fbc in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #20 0x00007ffac65f7f2b in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7ff80c000dc0, callback=0x7ffac65f7f9f <_FUN(gpointer)>, userData=0x7ffaa6064180) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #21 0x00007ffac65f7f79 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #22 0x00007ffab7b66d36 in g_main_dispatch (context=0x7ff80c000b70) at ../glib/gmain.c:3460 #23 g_main_context_dispatch (context=0x7ff80c000b70) at ../glib/gmain.c:4200 #24 0x00007ffab7bc42b8 in g_main_context_iterate.isra.0 (context=0x7ff80c000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #25 0x00007ffab7b663ff in g_main_loop_run (loop=0x7ff80c000da0) at ../glib/gmain.c:4479 #26 0x00007ffac65f85ec in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #27 0x00007ffac653d325 in operator()() const (__closure=0x7ffaa61b1bc8) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #28 0x00007ffac653ea32 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7ffaa61b1bc0) at /app/webkit/Source/WTF/wtf/Function.h:53 #29 0x00007ffac30d2a19 in WTF::Function<void ()>::operator()() const (this=0x7ff82cffcb80) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #30 0x00007ffac65472cd in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7ffaa6036200) at /app/webkit/Source/WTF/wtf/Threading.cpp:258 #31 0x00007ffac660634d in WTF::wtfThreadEntryPoint(void*) (context=0x7ffaa6036200) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:243 #32 0x00007ffab7405e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #33 0x00007ffab748d8c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100 ```
Attachments
Vitaly Dyackhov
Comment 1 2023-12-19 02:08:15 PST
EWS
Comment 2 2023-12-19 02:12:06 PST
Test gardening commit 272260@main (bf19131d8d08): <https://commits.webkit.org/272260@main> Reviewed commits have been landed. Closing PR #22016 and removing active labels.
Vitaly Dyackhov
Comment 3 2023-12-20 03:02:38 PST
Vitaly Dyackhov
Comment 4 2023-12-20 04:57:28 PST
EWS
Comment 5 2023-12-20 05:02:33 PST
Test gardening commit 272342@main (961ef193053a): <https://commits.webkit.org/272342@main> Reviewed commits have been landed. Closing PR #22098 and removing active labels.
EWS
Comment 6 2023-12-20 10:16:31 PST
Committed 272356@main (e9a0efd9166f): <https://commits.webkit.org/272356@main> Reviewed commits have been landed. Closing PR #22091 and removing active labels.
Radar WebKit Bug Importer
Comment 7 2023-12-20 10:17:14 PST
Note You need to log in before you can comment on or make changes to this bug.