Cherry-pick 272356@main (e9a0efd9166f). https://bugs.webkit.org/show_bug.cgi?id=266624

[WPE] ASSERTION FAILED: m_thread.ptr() == &Thread::current()
    https://bugs.webkit.org/show_bug.cgi?id=266624

    Reviewed by Chris Dumez.

    When threaded scrolling is used, we may end up execuring
    `WheelEventTestMonitor::scheduleCallbackCheck()` in the scrolling
    thread.

    Then when trying to create `WeakRef` of the `Page` we hit the assertion
    in Debug builds because the `Page` can only make single thread weak ptr.

    To solve this, this patch makes `WheelEventTestMonitor` be able to make
    thread-safe weak ptr and then accesses the page using its `m_page`
    instance variable.

    * LayoutTests/platform/wpe/TestExpectations:
    * Source/WebCore/page/WheelEventTestMonitor.cpp:
    (WebCore::WheelEventTestMonitor::scheduleCallbackCheck):
    * Source/WebCore/page/WheelEventTestMonitor.h:

    Canonical link: https://commits.webkit.org/272356@main